--- a/src/Pages/Home/Banner/Banner.css
+++ b/src/Pages/Home/Banner/Banner.css
@@ -6,9 +6,6 @@
   width: 100%;
   height: 100%;
   display: inline-block;
-  background: linear-gradient(
-    to bottom,
-    rgba(0, 47, 75, 0.5) 0%,
-    rgba(220, 66, 37, 0.5) 100%
-  );
+  background: linear-gradient(to right, #151515 0%, rgba(21, 21, 21, 0) 100%);
+  border-radius: 20px;
 }
